[package]
name = "oauth2"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uriparse = "0.6"
jsonwebtoken = "7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
actix-web = "3"